# R_SIM

./: .gitignore  AGENTS.md  ASSUMPTIONS.md  GOAL.md  GOAL_PROMPT.md  Makefile  PROGRESS.md  SPEC.md  main.py  pyproject.toml
backend/: active_simulation.py  f_backend.py  gcp_cfd_client.py  openfoam_integration.py  openrocket_import.py
config/: actuation.yaml  aero.yaml  coldgas.yaml  control.yaml  environment.yaml  motor.yaml  sensors.yaml  sim.yaml  structural.yaml  thermal.yaml  vehicle.yaml
docs/: control-api.md  pneumatics.md  progress-log.md  requirements.md  simulation-model.md  time_sync.md  tooling.md  ui-workflows.md  validation.md
firmware/: README.md
frontend/: .eslintrc.cjs  App.css  index.html  main.jsx  pnpm-lock.yaml
inputs/: README.md  bom_placeholder.yaml  materials_placeholder.yaml  motor_D21_placeholder.eng
renode/: README.md
rocketsim/: __init__.py  assumptions.py  cli.py  randomness.py
scripts/: pre_goal_check.py  run_active_scenario_matrix.py  run_pre_goal_checks.sh  setup_backend.sh  setup_frontend.sh
tests/: __init__.py  test_active_simulation.py  test_aero.py  test_assumptions.py  test_cli.py  test_coldgas.py  test_config.py  test_cpp_controller_safety.py  test_dynamics.py  test_environment.py  test_gcp_cfd_client.py  test_gui.py  test_heavy_cfd_unavailable.py  test_io_bundle.py  test_motor_database.py  test_openrocket_import.py  test_phase12_renode.py  test_phase13_validation.py  test_phase14_validation.py  test_phase8_control.py  test_randomness.py  test_sensors.py  test_solid_motor.py  test_structural.py  test_thermal.py  (+1 more)
(+89 files in other folders)
